# AeroTHON

./: .gitignore  rgb_depth_fusion.py
CADDesigns/New cads/: Arm.SLDPRT  Motor mount.SLDPRT  Motor place mount.SLDPRT  OakD lite camera 61g.SLDPRT  PDB PM06.SLDPRT  Uav hub top.SLDPRT  Uav hub.SLDPRT  battery.SLDPRT  drone shree.SLDASM  drone shree.STEP  drone.SLDASM  pixhawk 6c mini 40g.SLDPRT
CADDesigns/New cads/motor/CadFiles/: BLDCAssembly.SLDASM  BackCap.SLDPRT  CoilCores.SLDPRT  MainBody.SLDPRT  Rotor.SLDPRT
CADDesigns/New cads/prop/: 11x4.7.IGS  11x4.7.SLDPRT  11x4.7.STL  11x4.7_9mm.STEP  11x4.7_pusher.STEP  11x4.7_pusher_9mm.STEP
QR Code Initial/: mission_logic.py  pi_camera.py  qr_detector.py  qr_fip.py  qr_manager.py  qr_preprocess.py  qr_scanner_moving.py  qr_validator.py  test.py
QR Test/: qr_pipeline_demo.py  show_qr_codes.py  test.py
QRCodeDetection/: QRPipeline.py  QRScannerNode.py  QRScannerParams.yaml  mission_logic.py  package.xml  pi_camera.py  qr_detector.py  qr_manager.py  qr_preprocess.py  setup.py
YOLO/: check.py  check_tiles_labels.py  convert_visdrone_to_yolo.py  merge_general_classes.py  tile_yolo_dataset.py  train_model.py  visdrone_tiled.yaml
